--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -184,3 +184,12 @@ div.field, div.actions {
   font-size: 12px;
   list-style: square;
 }
+
+/* For listing users */
+ul.users {
+  margin-top: 1em;
+}
+
+.users li {
+  list-style: none;
+}
