--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,15 +5,17 @@
       <li><%= link_to "Home", root_path %></li>
       <li><%= link_to "Products", products_path %></li>
       <% if signed_in? %>
-      <li><%= link_to "Users", users_path %></li>
-      <li><%= link_to "Profile", current_user %></li>
-      <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+        <% if current_user.admin? %>
+          <li><%= link_to "Users", users_path %></li>
+        <% end %>
+        <li><%= link_to "Profile", current_user %></li>
+        <li><%= link_to "Settings", edit_user_path(current_user) %></li>
       <% end %>
       <li><%= link_to "Help", help_path %></li>
       <% if signed_in? %>
-      <li><%= link_to "Sign out", signout_path, :method => :delete %> </li>
+        <li><%= link_to "Sign out", signout_path, :method => :delete %> </li>
       <% else %>
-      <li><%= link_to "Sign in", signin_path %></li>
+        <li><%= link_to "Sign in", signin_path %></li>
       <% end %>
     </ul>
   </nav>
