--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,10 +1,8 @@
 <h1>All products</h1>
 
 <ul class="products">
-  Name, Party, Votes
-  <% @products.each do |product| %>
-    <li>
-      <%= product.name%>, <%= product.prize %>, <%= product.amount %>
-    </li>
-  <% end %>
+  <%= render @products %>
 </ul>
+<% if !current_user.nil? && current_user.admin? %>
+  <%= link_to "Add product", new_product_path %>
+<% end %>
