central app shuld be able to communicate with unit app

--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -5,7 +5,7 @@
     <td><%= product.amount %></td>
     <% if current_user.admin? %>
       <td><%= link_to "delete", product, :method => :delete, :confirm => "You sure?",
-                                       :title => "Delete #{product.name} %></td>
+                                       :title => "Delete #{product.name}" %></td>
     <% end %>
   <% end %>
 </tr>
