added amount set when creating a product

--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -10,6 +10,10 @@
     <%= f.label :prize %><br />
     <%= f.text_field :prize %>
   </div>
+  <div class="field">
+    <%= f.label :amount %>
+    <%= f.text_field :amount %>
+  </div>
   <div class="actions">
     <%= f.submit "Add" %>
   </div>
