fixed problem with product addition, migrating app to heroku

--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -11,7 +11,7 @@
     <%= f.text_field :prize %>
   </div>
   <div class="field">
-    <%= f.label :amount %>
+    <%= f.label :amount %><br />
     <%= f.text_field :amount %>
   </div>
   <div class="actions">
