--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,7 +2,7 @@
 <p>
   <ul>
     <li>Jarosław Duraj (170182)</li>
-    <li>Daniel Horodyski</li>
+    <li>Daniel Horodyski (177020)</li>
     <li>Michał Kuś</li>
     <li>Remigiusz Lasota</li>
   </ul>
